@@ -6,7 +6,7 @@
  */
 
 #include <windows.h>
-#include<process.h>
+#include <process.h>
 #include <stdio.h>
 
 /*
@@ -68,3 +68,4 @@ main()
 
   return(0);
 }
+
